RESOLVED FIXED194363
Digital crown should scroll safe browsing warning on watchOS
https://bugs.webkit.org/show_bug.cgi?id=194363
Summary Digital crown should scroll safe browsing warning on watchOS
Alex Christensen
Reported 2019-02-06 15:12:23 PST
Digital crown should scroll safe browsing warning on watchOS
Attachments
Patch (3.29 KB, patch)
2019-02-06 15:12 PST, Alex Christensen
wenson_hsieh: review+
Alex Christensen
Comment 1 2019-02-06 15:12:55 PST
Alex Christensen
Comment 2 2019-02-06 15:12:57 PST
Wenson Hsieh
Comment 3 2019-02-06 17:51:31 PST
Comment on attachment 361336 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=361336&action=review > Source/WebKit/UIProcess/Cocoa/WKSafeBrowsingWarning.mm:38 > +#import <UIKit/UIResponder_Private.h> Nit - I think you can just import "UIKitSPI.h" instead. > Source/WebKit/UIProcess/Cocoa/WKSafeBrowsingWarning.mm:296 > + self.crownInputScrollDirection = PUICCrownInputScrollDirectionVertical; Nice, you took out the scrollIndicator = NO :) I was about to tell you that we actually want to show scroll indicators in native UI here, but it looks like you beat me to it.
Alex Christensen
Comment 4 2019-02-07 10:24:58 PST
Note You need to log in before you can comment on or make changes to this bug.