Digital crown should scroll safe browsing warning on watchOS https://bugs.webkit.org/show_bug.cgi?id=194363 <rdar://problem/47348124>

Reviewed by Wenson Hsieh.

* UIProcess/Cocoa/WKSafeBrowsingWarning.h:
* UIProcess/Cocoa/WKSafeBrowsingWarning.mm:
(-[WKSafeBrowsingWarning initWithFrame:safeBrowsingWarning:completionHandler:]):
(-[WKSafeBrowsingWarning addContent]):



Canonical link: https://commits.webkit.org/208815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241125 268f45cc-cd09-0410-ab3c-d52691b4dbfc